--- a/Code/FX_overlays.ipynb
+++ b/Code/FX_overlays.ipynb
@@ -2,18 +2,409 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e761336b",
+   "execution_count": 14,
+   "id": "22276494",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## FX Overlays"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "## FX Overlay\n",
+    "## ----------------------------------------------------------------------------------\n",
+    "## 1. Loading data (GDP, Inflation, Futures, 2y yields)\n",
+    "## 2. Building THREE macro signals per region:\n",
+    "##      - Business Cycle   (GDP YoY – Inflation YoY)\n",
+    "##      - Monetary Policy  (– 12m change in 2y yield)\n",
+    "##      - Risk Sentiment   (12m equity futures return)\n",
+    "#       - Here we are missing the FX/ trade data \n",
+    "\n",
+    "## 3. Combines them into a single macro FX score per region & month\n",
+    "\n",
+    "## 4. Standardizes scores cross-sectionally (z-scores across regions each month)\n",
+    "\n",
+    "## 5. Maping the z-score into a Discrete Hedge Ratio:\n",
+    "##       strong positive -> 0% hedge (expect FX appreciation)\n",
+    "##       mid positive   -> 50% hedge\n",
+    "##       mid negative   -> 75% hedge\n",
+    "##       strong negative -> 100% hedge (expect FX depreciation)\n",
+    "\n",
+    "## 6. Signal at t used for t+1 (Shifting the hedge ratio forward by one month)\n",
+    "\n",
+    "## 7. Outputs a long-format table: Date, Region, FXScore_z, HedgeRatio_next_month\n",
+    "\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------------------------------\n",
+    "# 1. Load data from Excel\n",
+    "# --------------------------------------------------------------------------------------------\n",
+    "\n",
+    "#  Adjust paths for your computer\n",
+    "gdp_path = r\"C:/Users/Sedláček/Documents/UZH/PMP/Macro_momentum/PMP_December_8/Data/GDP.xlsx\"\n",
+    "inf_path = r\"C:/Users/Sedláček/Documents/UZH/PMP/Macro_momentum/PMP_December_8/Data/INF.xlsx\"\n",
+    "fut_path = r\"C:/Users/Sedláček/Documents/UZH/PMP/Macro_momentum/PMP_December_8/Data/Futures.xlsx\"\n",
+    "y2_path  = r\"C:/Users/Sedláček/Documents/UZH/PMP/Macro_momentum/PMP_December_8/Data/2_years_yields.xlsx\"\n",
+    "\n",
+    "# Quarterly GDP & Inflation (YoY) – one row per quarter\n",
+    "# Columns structure is: Date, CH_GDP, CH_GDP_YoY, JP_GDP, JP_GDP_YoY, ...\n",
+    "gdp = pd.read_excel(gdp_path, parse_dates=[\"Date\"])\n",
+    "inf = pd.read_excel(inf_path, parse_dates=[\"Date\"])\n",
+    "\n",
+    "# Monthly equity futures – one row per month, proxy for equity prices\n",
+    "# Columns structure: Date, US, AU, CH, JP, UK, EM, EU\n",
+    "fut = pd.read_excel(fut_path, parse_dates=[\"Date\"])\n",
+    "\n",
+    "# Monthly 2-year yields – one row per month\n",
+    "# Columns structure: Date, US_PX_LAST, GB_PX_LAST, EU_PX_LAST, ...\n",
+    "y2  = pd.read_excel(y2_path, parse_dates=[\"Date\"])\n",
+    "\n",
+    "# Seting Date as index and sort chronologically.\n",
+    "# This ensures indexes are monotonic increasing\n",
+    "gdp = gdp.set_index(\"Date\").sort_index()\n",
+    "inf = inf.set_index(\"Date\").sort_index()\n",
+    "fut = fut.set_index(\"Date\").sort_index()\n",
+    "y2  = y2.set_index(\"Date\").sort_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b545ade9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date Region  FXScore_z  HedgeRatio_next_month\n",
+      "0  1998-09-01     US   1.414493                    NaN\n",
+      "1  1998-09-01     GB   0.945184                    NaN\n",
+      "2  1998-09-01     EU   0.551510                    NaN\n",
+      "3  1998-09-01     JP  -1.195396                    NaN\n",
+      "4  1998-09-01     CH  -0.407623                    NaN\n",
+      "5  1998-09-01     EM  -0.235222                    NaN\n",
+      "6  1998-09-01     AU  -1.072946                    NaN\n",
+      "7  1998-10-01     US   0.969936                   0.00\n",
+      "8  1998-10-01     GB   0.844101                   0.50\n",
+      "9  1998-10-01     EU   0.691601                   0.50\n",
+      "10 1998-10-01     JP  -1.326462                   1.00\n",
+      "11 1998-10-01     CH   0.318408                   0.75\n",
+      "12 1998-10-01     EM  -0.083156                   0.75\n",
+      "13 1998-10-01     AU  -1.414428                   1.00\n",
+      "14 1998-11-01     US   0.653641                   0.50\n",
+      "15 1998-11-01     GB   1.386619                   0.50\n",
+      "16 1998-11-01     EU   0.646681                   0.50\n",
+      "17 1998-11-01     JP  -1.145607                   1.00\n",
+      "18 1998-11-01     CH  -0.531505                   0.50\n",
+      "19 1998-11-01     EM   0.245770                   0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------------------------------------------------------------------------------------------\n",
+    "# 2. Regions and column mapping\n",
+    "# --------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "# Labeles throughout the model.\n",
+    "canonical_regions = [\"US\", \"GB\", \"EU\", \"JP\", \"CH\", \"EM\", \"AU\"]\n",
+    "\n",
+    "# Mapping between futures columns and region codes.\n",
+    "# Left = column name in Futures.xlsx\n",
+    "# Right = region code.\n",
+    "# Example: futures column \"UK\" corresponds to region \"GB\". Keeping GB notations\n",
+    "fut_col_map = {\n",
+    "    \"US\": \"US\",\n",
+    "    \"AU\": \"AU\",\n",
+    "    \"CH\": \"CH\",\n",
+    "    \"JP\": \"JP\",\n",
+    "    \"UK\": \"GB\",\n",
+    "    \"EM\": \"EM\",\n",
+    "    \"EU\": \"EU\",\n",
+    "}\n",
+    "\n",
+    "# Mapping between 2-year yield columns and region codes.\n",
+    "# Left = column name in 2_years_yields.xlsx\n",
+    "# Right = canonical region code.\n",
+    "y2_col_map = {\n",
+    "    \"US_PX_LAST\": \"US\",\n",
+    "    \"GB_PX_LAST\": \"GB\",\n",
+    "    \"EU_PX_LAST\": \"EU\",\n",
+    "    \"JP_PX_LAST\": \"JP\",\n",
+    "    \"CH_PX_LAST\": \"CH\",\n",
+    "    \"EM_PX_LAST\": \"EM\",\n",
+    "    # When you add Australian 2y yields, add e.g.: \"AU_PX_LAST\": \"AU\"\n",
+    "}\n",
+    "\n",
+    "def extract_region_from_col(col, suffix):\n",
+    "    \"\"\"\n",
+    "    Helper function:\n",
+    "    Given a column name and a suffix, return the region code.\n",
+    "\n",
+    "    Example:\n",
+    "        col    = \"CH_GDP_YoY\"\n",
+    "        suffix = \"GDP_YoY\"\n",
+    "\n",
+    "    Then this returns \"CH\".\n",
+    "    If the column does not end with the suffix, return None.\n",
+    "    \"\"\"\n",
+    "    if col.endswith(suffix):\n",
+    "        return col.split(\"_\")[0]\n",
+    "    return None\n",
+    "\n",
+    "# -------------------------\n",
+    "# 3. Create master monthly index\n",
+    "# -------------------------\n",
+    "\n",
+    "# We want everything on a consistent **monthly** timeline at **month start dates**.\n",
+    "# We will use the futures data as our \"master\" monthly index (since it's monthly already).\n",
+    "\n",
+    "# Make sure futures are sorted and then convert their index to month-start timestamps.\n",
+    "# Example: 1997-09-30 -> 1997-09-01, 1997-10-31 -> 1997-10-01, etc.\n",
+    "fut = fut.sort_index()\n",
+    "monthly_index = fut.index.to_period(\"M\").to_timestamp()\n",
+    "\n",
+    "# Very important: update fut.index to this month-start index.\n",
+    "# This way, fut now has one row per month, with date = YYYY-MM-01.\n",
+    "fut.index = monthly_index\n",
+    "\n",
+    "# Do the same transformation for 2-year yields:\n",
+    "y2 = y2.sort_index()\n",
+    "y2.index = y2.index.to_period(\"M\").to_timestamp()\n",
+    "\n",
+    "# Now reindex yields to the same monthly_index and forward-fill any missing values.\n",
+    "# This ensures y2 and fut share exactly the same index.\n",
+    "y2 = y2.reindex(monthly_index).ffill()\n",
+    "\n",
+    "# For GDP and Inflation (quarterly data):\n",
+    "# We reindex them to the monthly_index and forward-fill.\n",
+    "# That means each month between quarterly releases uses the latest available quarter.\n",
+    "gdp_monthly = gdp.reindex(monthly_index).ffill()\n",
+    "inf_monthly = inf.reindex(monthly_index).ffill()\n",
+    "\n",
+    "# -------------------------\n",
+    "# 4. Build the three macro signals\n",
+    "# -------------------------\n",
+    "\n",
+    "# 4.1 BUSINESS CYCLE SIGNAL:\n",
+    "#     BC = GDP YoY – Inflation YoY\n",
+    "#     Idea: strong real growth relative to inflation is good → positive signal.\n",
+    "\n",
+    "bc_signal = pd.DataFrame(index=monthly_index,\n",
+    "                         columns=canonical_regions,\n",
+    "                         dtype=float)\n",
+    "\n",
+    "for col in gdp_monthly.columns:\n",
+    "    # Look for columns ending with \"GDP_YoY\" like \"CH_GDP_YoY\"\n",
+    "    region = extract_region_from_col(col, \"GDP_YoY\")\n",
+    "    if region in canonical_regions:\n",
+    "        gdp_yoy = gdp_monthly[col]\n",
+    "\n",
+    "        # Matching inflation YoY column: e.g. \"CH_INF_YoY\"\n",
+    "        inf_col = f\"{region}_INF_YoY\"\n",
+    "        if inf_col in inf_monthly.columns:\n",
+    "            inf_yoy = inf_monthly[inf_col]\n",
+    "\n",
+    "            # Business cycle signal = growth minus inflation.\n",
+    "            bc_signal[region] = gdp_yoy - inf_yoy\n",
+    "        # If the inflation column is missing, we just leave that region as NaN.\n",
+    "\n",
+    "# 4.2 MONETARY POLICY SIGNAL:\n",
+    "#     MP = − (12-month change in 2-year yield)\n",
+    "#     Idea:\n",
+    "#       - If 2-year yields fall (dy_12m < 0), central bank is easing → positive signal.\n",
+    "#       - If 2-year yields rise, central bank is tightening → negative signal.\n",
+    "\n",
+    "mp_signal = pd.DataFrame(index=monthly_index,\n",
+    "                         columns=canonical_regions,\n",
+    "                         dtype=float)\n",
+    "\n",
+    "for col, region in y2_col_map.items():\n",
+    "    if col in y2.columns and region in canonical_regions:\n",
+    "        y = y2[col]                 # 2-year yield series\n",
+    "        dy_12m = y - y.shift(12)    # 12-month change in yield\n",
+    "        mp_signal[region] = -dy_12m # Negate so that falling yields → positive signal\n",
+    "\n",
+    "# 4.3 RISK SENTIMENT SIGNAL:\n",
+    "#     RS = 12-month equity futures return\n",
+    "#     Idea:\n",
+    "#       - Strong past 12m equity performance = strong sentiment → positive signal.\n",
+    "#       - Weak or negative past 12m performance = weak sentiment → negative.\n",
+    "\n",
+    "rs_signal = pd.DataFrame(index=monthly_index,\n",
+    "                         columns=canonical_regions,\n",
+    "                         dtype=float)\n",
+    "\n",
+    "for fut_col, region in fut_col_map.items():\n",
+    "    if fut_col in fut.columns and region in canonical_regions:\n",
+    "        p = fut[fut_col]                         # futures price\n",
+    "        rs_signal[region] = p / p.shift(12) - 1  # 12-month simple return\n",
+    "\n",
+    "# -------------------------\n",
+    "# 5. Combine signals into a macro FX score\n",
+    "# -------------------------\n",
+    "\n",
+    "# We now have three DataFrames:\n",
+    "#   bc_signal (Business Cycle)\n",
+    "#   mp_signal (Monetary Policy)\n",
+    "#   rs_signal (Risk Sentiment)\n",
+    "#\n",
+    "# Each has shape (months × regions).\n",
+    "# We want a single summary macro FX score per region and month:\n",
+    "#   FXScore_raw = average of available signals (BC, MP, RS).\n",
+    "# This mimics Brooks' equal-weighting across macro themes.\n",
+    "\n",
+    "signal_stack = {\n",
+    "    \"BC\": bc_signal,\n",
+    "    \"MP\": mp_signal,\n",
+    "    \"RS\": rs_signal\n",
+    "}\n",
+    "\n",
+    "fx_raw = pd.DataFrame(index=monthly_index,\n",
+    "                      columns=canonical_regions,\n",
+    "                      dtype=float)\n",
+    "\n",
+    "for region in canonical_regions:\n",
+    "    parts = []\n",
+    "\n",
+    "    # Collect this region's series from each theme.\n",
+    "    for _, df_sig in signal_stack.items():\n",
+    "        if region in df_sig.columns:\n",
+    "            parts.append(df_sig[region])\n",
+    "\n",
+    "    if not parts:\n",
+    "        # If we somehow have no signals for this region, skip it.\n",
+    "        continue\n",
+    "\n",
+    "    # Concatenate along columns: e.g. [BC, MP, RS], then take row-wise mean.\n",
+    "    stacked = pd.concat(parts, axis=1)\n",
+    "\n",
+    "    # Equal-weighted average across the available signals for that month.\n",
+    "    fx_raw[region] = stacked.mean(axis=1, skipna=True)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 6. Cross-sectional z-score each month\n",
+    "# -------------------------\n",
+    "\n",
+    "# Brooks standardizes signals cross-sectionally so that:\n",
+    "# - At each date, some regions are positive (above mean) and some negative (below mean).\n",
+    "# - Z-score: z_ij = (x_ij − mean_i) / std_i where i = date, j = region.\n",
+    "#   This ensures each month’s signal is centered and comparable across time.\n",
+    "\n",
+    "def cross_sectional_zscore(df):\n",
+    "    \"\"\"\n",
+    "    df: DataFrame of shape (time, regions)\n",
+    "\n",
+    "    Returns:\n",
+    "        z-scored version where for each time t:\n",
+    "        z_tj = (x_tj - mean_t) / std_t\n",
+    "    \"\"\"\n",
+    "    mean = df.mean(axis=1)\n",
+    "    std  = df.std(axis=1)\n",
+    "    z = df.sub(mean, axis=0).div(std, axis=0)\n",
+    "    return z\n",
+    "\n",
+    "fx_z = cross_sectional_zscore(fx_raw)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 7. Discrete hedge ratio mapping (FX overlay rule)\n",
+    "# -------------------------\n",
+    "\n",
+    "# We now have:\n",
+    "#   fx_z[t, region] = standardized macro FX score.\n",
+    "#\n",
+    "# Idea for FX overlay:\n",
+    "#   - Strong positive score → currency expected to appreciate → hedge less.\n",
+    "#   - Strong negative score → currency expected to depreciate → hedge more.\n",
+    "#\n",
+    "# We map z-score to discrete hedge ratios:\n",
+    "#   z >  1.0        → HedgeRatio = 0.00  (0% hedged, fully exposed to FX)\n",
+    "#   0 < z ≤ 1.0     → HedgeRatio = 0.50  (50% hedged)\n",
+    "#  -1.0 ≤ z ≤ 0     → HedgeRatio = 0.75  (75% hedged)\n",
+    "#   z < -1.0        → HedgeRatio = 1.00  (100% hedged, fully hedge FX)\n",
+    "\n",
+    "def hedge_ratio_from_score(z):\n",
+    "    \"\"\"\n",
+    "    Map z-scores to discrete hedge ratios between 0 and 1.\n",
+    "\n",
+    "    z: DataFrame with same shape as fx_z (time x region)\n",
+    "    \"\"\"\n",
+    "    hr = pd.DataFrame(index=z.index, columns=z.columns, dtype=float)\n",
+    "\n",
+    "    for region in z.columns:\n",
+    "        s = z[region]\n",
+    "\n",
+    "        hr_region = np.select(\n",
+    "            [\n",
+    "                s > 1.0,\n",
+    "                (s > 0.0) & (s <= 1.0),\n",
+    "                (s > -1.0) & (s <= 0.0),\n",
+    "                s <= -1.0,\n",
+    "            ],\n",
+    "            [\n",
+    "                0.0,   # strong positive -> 0% hedge\n",
+    "                0.5,   # mild positive   -> 50% hedge\n",
+    "                0.75,  # mild negative   -> 75% hedge\n",
+    "                1.0,   # strong negative -> 100% hedge\n",
+    "            ],\n",
+    "            default=np.nan,  # if z is NaN\n",
+    "        )\n",
+    "\n",
+    "        hr[region] = hr_region\n",
+    "\n",
+    "    return hr\n",
+    "\n",
+    "hedge_ratio = hedge_ratio_from_score(fx_z)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 8. Shift so signal at t is used to hedge in t+1\n",
+    "# -------------------------\n",
+    "\n",
+    "# When you implement the strategy, you only know the signal at the end of month t,\n",
+    "# so you must apply it to the hedge decision for month t+1.\n",
+    "# Therefore we shift the hedge ratio forward by 1 month.\n",
+    "\n",
+    "hedge_ratio_next = hedge_ratio.shift(1)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 9. Final long-format table\n",
+    "# -------------------------\n",
+    "\n",
+    "# fx_z: wide format (time x region)\n",
+    "# hedge_ratio_next: same shape\n",
+    "# We convert to long format with one row per (Date, Region).\n",
+    "\n",
+    "fx_z_long = fx_z.stack().rename(\"FXScore_z\")                  # MultiIndex: (Date, Region)\n",
+    "hedge_long = hedge_ratio_next.stack().rename(\"HedgeRatio_next_month\")\n",
+    "\n",
+    "# Combine into a single DataFrame\n",
+    "result = pd.concat([fx_z_long, hedge_long], axis=1).reset_index()\n",
+    "result.columns = [\"Date\", \"Region\", \"FXScore_z\", \"HedgeRatio_next_month\"]\n",
+    "\n",
+    "# Save to CSV so you can inspect and use it in other parts of your project\n",
+    "result.to_csv(\"fx_hedge_signals_discrete.csv\", index=False)\n",
+    "\n",
+    "# Show first 20 lines as a quick check\n",
+    "print(result.head(20))\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
