--- a/Code/Fundamental_strategy.ipynb
+++ b/Code/Fundamental_strategy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "caf3b93c",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,8 @@
    ],
    "source": [
     "## FUNDAMENTAL STRATEGY \n",
+    "## Hello\n",
+    "\n",
     "## --------------------\n",
     "## This script implements a long/short fundamental strategy across regional equity indices,\n",
     "## in the spirit of Brooks' macro-momentum approach but using *fundamental indicators*\n",
