--- a/Code/Fundamental_strategy.ipynb
+++ b/Code/Fundamental_strategy.ipynb
@@ -54,6 +54,8 @@
    "source": [
     "## FUNDAMENTAL STRATEGY \n",
     "## Hello\n",
+    "# HELLOOOOOOO\n",
+    "\n",
     "\n",
     "## --------------------\n",
     "## This script implements a long/short fundamental strategy across regional equity indices,\n",
