--- a/Code/Fundamental_strategy.ipynb
+++ b/Code/Fundamental_strategy.ipynb
@@ -57,6 +57,9 @@
     "# HELLOOOOOOO\n",
     "\n",
     "\n",
+    "### HELOOOOOOOO 3\n",
+    "\n",
+    "\n",
     "## --------------------\n",
     "## This script implements a long/short fundamental strategy across regional equity indices,\n",
     "## in the spirit of Brooks' macro-momentum approach but using *fundamental indicators*\n",
