--- a/Code/Fundamental_strategy.ipynb
+++ b/Code/Fundamental_strategy.ipynb
@@ -52,15 +52,6 @@
     }
    ],
    "source": [
-    "## FUNDAMENTAL STRATEGY \n",
-    "## Hello\n",
-    "# HELLOOOOOOO\n",
-    "\n",
-    "\n",
-    "### HELOOOOOOOO 3\n",
-    "## Push\n",
-    "\n",
-    "\n",
     "## --------------------\n",
     "## This script implements a long/short fundamental strategy across regional equity indices,\n",
     "## in the spirit of Brooks' macro-momentum approach but using *fundamental indicators*\n",
@@ -617,7 +608,7 @@
     "plt.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -638,22 +629,6 @@
     "    run_cc_strategy,\n",
     ") "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33eca8be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1465c37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
