--- a/Code/FX_overlays.ipynb
+++ b/Code/FX_overlays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "22276494",
    "metadata": {},
    "outputs": [],
@@ -69,37 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b545ade9",
+   "id": "b345349b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Date Region  FXScore_z  HedgeRatio_next_month\n",
-      "0  1998-09-01     US   1.414493                    NaN\n",
-      "1  1998-09-01     GB   0.945184                    NaN\n",
-      "2  1998-09-01     EU   0.551510                    NaN\n",
-      "3  1998-09-01     JP  -1.195396                    NaN\n",
-      "4  1998-09-01     CH  -0.407623                    NaN\n",
-      "5  1998-09-01     EM  -0.235222                    NaN\n",
-      "6  1998-09-01     AU  -1.072946                    NaN\n",
-      "7  1998-10-01     US   0.969936                   0.00\n",
-      "8  1998-10-01     GB   0.844101                   0.50\n",
-      "9  1998-10-01     EU   0.691601                   0.50\n",
-      "10 1998-10-01     JP  -1.326462                   1.00\n",
-      "11 1998-10-01     CH   0.318408                   0.75\n",
-      "12 1998-10-01     EM  -0.083156                   0.75\n",
-      "13 1998-10-01     AU  -1.414428                   1.00\n",
-      "14 1998-11-01     US   0.653641                   0.50\n",
-      "15 1998-11-01     GB   1.386619                   0.50\n",
-      "16 1998-11-01     EU   0.646681                   0.50\n",
-      "17 1998-11-01     JP  -1.145607                   1.00\n",
-      "18 1998-11-01     CH  -0.531505                   0.50\n",
-      "19 1998-11-01     EM   0.245770                   0.75\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ------------------------------------------------------------------------------------------------\n",
     "# 2. Regions and column mapping\n",
@@ -149,7 +121,45 @@
     "    \"\"\"\n",
     "    if col.endswith(suffix):\n",
     "        return col.split(\"_\")[0]\n",
-    "    return None\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b545ade9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date Region  FXScore_z  HedgeRatio_next_month\n",
+      "0  1998-09-01     US   1.414493                    NaN\n",
+      "1  1998-09-01     GB   0.945184                    NaN\n",
+      "2  1998-09-01     EU   0.551510                    NaN\n",
+      "3  1998-09-01     JP  -1.195396                    NaN\n",
+      "4  1998-09-01     CH  -0.407623                    NaN\n",
+      "5  1998-09-01     EM  -0.235222                    NaN\n",
+      "6  1998-09-01     AU  -1.072946                    NaN\n",
+      "7  1998-10-01     US   0.969936                   0.00\n",
+      "8  1998-10-01     GB   0.844101                   0.50\n",
+      "9  1998-10-01     EU   0.691601                   0.50\n",
+      "10 1998-10-01     JP  -1.326462                   1.00\n",
+      "11 1998-10-01     CH   0.318408                   0.75\n",
+      "12 1998-10-01     EM  -0.083156                   0.75\n",
+      "13 1998-10-01     AU  -1.414428                   1.00\n",
+      "14 1998-11-01     US   0.653641                   0.50\n",
+      "15 1998-11-01     GB   1.386619                   0.50\n",
+      "16 1998-11-01     EU   0.646681                   0.50\n",
+      "17 1998-11-01     JP  -1.145607                   1.00\n",
+      "18 1998-11-01     CH  -0.531505                   0.50\n",
+      "19 1998-11-01     EM   0.245770                   0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "\n",
     "# -------------------------\n",
     "# 3. Create master monthly index\n",
@@ -385,6 +395,88 @@
     "\n",
     "# Show first 20 lines as a quick check\n",
     "print(result.head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4269c7c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             US   GB   EU   JP   CH   EM   AU\n",
+      "Date                                         \n",
+      "2025-10-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "2025-09-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "2025-08-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "2025-07-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "2025-06-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "...         ...  ...  ...  ...  ...  ...  ...\n",
+      "1998-01-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "1997-12-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "1997-11-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "1997-10-01  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+      "1997-09-01  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+      "\n",
+      "[338 rows x 7 columns]\n",
+      "                US     GB     EU     JP     CH      EM  AU\n",
+      "Date                                                      \n",
+      "2025-10-01  0.5966  0.666  0.313 -0.479  0.528  0.4895 NaN\n",
+      "2025-09-01  0.0328 -0.002  0.049 -0.552  0.532  0.1547 NaN\n",
+      "2025-08-01  0.2998  0.166  0.451 -0.497  0.693  0.3335 NaN\n",
+      "2025-07-01  0.3004 -0.035  0.567 -0.367  0.742  0.5227 NaN\n",
+      "2025-06-01  1.0343  0.404  0.972 -0.384  0.852  0.9559 NaN\n",
+      "...            ...    ...    ...    ...    ...     ...  ..\n",
+      "1998-01-01     NaN    NaN    NaN    NaN    NaN     NaN NaN\n",
+      "1997-12-01     NaN    NaN    NaN    NaN    NaN     NaN NaN\n",
+      "1997-11-01     NaN    NaN    NaN    NaN    NaN     NaN NaN\n",
+      "1997-10-01     NaN    NaN    NaN    NaN    NaN     NaN NaN\n",
+      "1997-09-01     NaN    NaN    NaN    NaN    NaN     NaN NaN\n",
+      "\n",
+      "[338 rows x 7 columns]\n",
+      "                  US        GB        EU        JP        CH        EM  \\\n",
+      "Date                                                                     \n",
+      "2025-10-01  0.153843  0.208974  0.244085  0.243448  0.133660  0.221500   \n",
+      "2025-09-01  0.116404  0.125311  0.161653  0.169629  0.071014  0.133448   \n",
+      "2025-08-01  0.099490  0.115843  0.137625  0.147609  0.057742  0.121028   \n",
+      "2025-07-01  0.102824  0.108819  0.147454  0.073431  0.052154  0.100957   \n",
+      "2025-06-01  0.089128  0.144851  0.182202  0.154598  0.135337  0.105054   \n",
+      "...              ...       ...       ...       ...       ...       ...   \n",
+      "1998-01-01       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+      "1997-12-01       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+      "1997-11-01       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+      "1997-10-01       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+      "1997-09-01       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+      "\n",
+      "                  AU  \n",
+      "Date                  \n",
+      "2025-10-01  0.071439  \n",
+      "2025-09-01  0.007596  \n",
+      "2025-08-01  0.061966  \n",
+      "2025-07-01  0.049903  \n",
+      "2025-06-01  0.068200  \n",
+      "...              ...  \n",
+      "1998-01-01       NaN  \n",
+      "1997-12-01       NaN  \n",
+      "1997-11-01       NaN  \n",
+      "1997-10-01       NaN  \n",
+      "1997-09-01       NaN  \n",
+      "\n",
+      "[338 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bc_signal = bc_signal.sort_values(\"Date\", ascending=False)#.reset_index(drop=True)\n",
+    "mp_signal = mp_signal.sort_values(\"Date\", ascending=False)\n",
+    "rs_signal = rs_signal.sort_values(\"Date\", ascending=False)\n",
+    "\n",
+    "print(bc_signal)\n",
+    "print(mp_signal)\n",
+    "print(rs_signal)"
    ]
   }
  ],
