Fama French Stuff Dan

--- a/Code_Ryan/Risk Sentiment Portfolios/RS_Equities_v2.ipynb
+++ b/Code_Ryan/Risk Sentiment Portfolios/RS_Equities_v2.ipynb
@@ -1756,6 +1756,16 @@
     "yearly_vol_ann = tmp.groupby(\"year\")[\"ret_net\"].std() * (12 ** 0.5)\n",
     "yearly_vol_ann\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea515757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmp."
+   ]
   }
  ],
  "metadata": {
