--- a/Code_Ryan/Risk Sentiment Portfolios/RS_Equities_v2.ipynb
+++ b/Code_Ryan/Risk Sentiment Portfolios/RS_Equities_v2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "985cd42d",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "4e3354b7",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "f56abe03",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/37/zcyd0byn17lfrmxtt4_4k3s40000gn/T/ipykernel_74901/2677495952.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/37/zcyd0byn17lfrmxtt4_4k3s40000gn/T/ipykernel_80051/2677495952.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  factors_data = pd.read_excel(\n"
      ]
     },
@@ -96,7 +96,7 @@
        "Freq: ME, Name: RF, Length: 1192, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "bbb36b75",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/37/zcyd0byn17lfrmxtt4_4k3s40000gn/T/ipykernel_74901/297690613.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/37/zcyd0byn17lfrmxtt4_4k3s40000gn/T/ipykernel_80051/297690613.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  famafrench_data = pd.read_csv(\n"
      ]
     },
@@ -313,7 +313,7 @@
        "[549 rows x 7 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "6a9f8ef2",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "Freq: ME, Name: MSCI World, Length: 468, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "6bab29ec",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
        "[338 rows x 7 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "818d1495",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "[338 rows x 7 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "39ab6e20",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1012,7 @@
        "[338 rows x 7 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "f23a41af",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1205,7 @@
        "[278 rows x 7 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "78ae6e6b",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1504,7 @@
        "[277 rows x 13 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "d89eea0b",
    "metadata": {},
    "outputs": [
@@ -1696,7 +1696,7 @@
        "AC 3                        0.0802   -0.0726"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "0cfa8481",
    "metadata": {},
    "outputs": [
@@ -1742,7 +1742,7 @@
        "Name: ret_net, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,12 +1759,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ea515757",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Strategy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Arithm Avg Total Return</th>\n",
+       "      <td>3.4281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arithm Avg Xs Return</th>\n",
+       "      <td>1.8382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Std Xs Returns</th>\n",
+       "      <td>11.0989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sharpe Arithmetic</th>\n",
+       "      <td>0.1656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geom Avg Total Return</th>\n",
+       "      <td>2.8572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geom Avg Xs Return</th>\n",
+       "      <td>1.2571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sharpe Geometric</th>\n",
+       "      <td>0.1133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Min Xs Return</th>\n",
+       "      <td>-11.1518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Max Xs Return</th>\n",
+       "      <td>12.7937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Skewness</th>\n",
+       "      <td>0.1550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Excess Kurtosis</th>\n",
+       "      <td>2.3919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpha Arithmetic</th>\n",
+       "      <td>3.7663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpha Arithmetic p-val</th>\n",
+       "      <td>0.1090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpha Geometric</th>\n",
+       "      <td>3.2450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 1</th>\n",
+       "      <td>-0.0795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 1 p-val</th>\n",
+       "      <td>0.4878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 2</th>\n",
+       "      <td>0.0143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 2 p-val</th>\n",
+       "      <td>0.8922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 3</th>\n",
+       "      <td>-0.0105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 3 p-val</th>\n",
+       "      <td>0.9142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 4</th>\n",
+       "      <td>-0.0456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 4 p-val</th>\n",
+       "      <td>0.6495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 5</th>\n",
+       "      <td>0.0215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 5 p-val</th>\n",
+       "      <td>0.8749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 6</th>\n",
+       "      <td>-0.2074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 6 p-val</th>\n",
+       "      <td>0.0005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 7</th>\n",
+       "      <td>-0.0966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beta 7 p-val</th>\n",
+       "      <td>0.4985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tracking Error</th>\n",
+       "      <td>10.7818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Information Ratio</th>\n",
+       "      <td>0.3010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC 1</th>\n",
+       "      <td>-0.1253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC 2</th>\n",
+       "      <td>0.0701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC 3</th>\n",
+       "      <td>-0.0664</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Strategy\n",
+       "Arithm Avg Total Return    3.4281\n",
+       "Arithm Avg Xs Return       1.8382\n",
+       "Std Xs Returns            11.0989\n",
+       "Sharpe Arithmetic          0.1656\n",
+       "Geom Avg Total Return      2.8572\n",
+       "Geom Avg Xs Return         1.2571\n",
+       "Sharpe Geometric           0.1133\n",
+       "Min Xs Return            -11.1518\n",
+       "Max Xs Return             12.7937\n",
+       "Skewness                   0.1550\n",
+       "Excess Kurtosis            2.3919\n",
+       "Alpha Arithmetic           3.7663\n",
+       "Alpha Arithmetic p-val     0.1090\n",
+       "Alpha Geometric            3.2450\n",
+       "Beta 1                    -0.0795\n",
+       "Beta 1 p-val               0.4878\n",
+       "Beta 2                     0.0143\n",
+       "Beta 2 p-val               0.8922\n",
+       "Beta 3                    -0.0105\n",
+       "Beta 3 p-val               0.9142\n",
+       "Beta 4                    -0.0456\n",
+       "Beta 4 p-val               0.6495\n",
+       "Beta 5                     0.0215\n",
+       "Beta 5 p-val               0.8749\n",
+       "Beta 6                    -0.2074\n",
+       "Beta 6 p-val               0.0005\n",
+       "Beta 7                    -0.0966\n",
+       "Beta 7 p-val               0.4985\n",
+       "Tracking Error            10.7818\n",
+       "Information Ratio          0.3010\n",
+       "AC 1                      -0.1253\n",
+       "AC 2                       0.0701\n",
+       "AC 3                      -0.0664"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pmp."
+    "pmp.run_factor_regression(results, famafrench_data)"
    ]
   }
  ],
