--- a/Code/Fundamental_strategy.ipynb
+++ b/Code/Fundamental_strategy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "3bdeceff",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "98f2e47c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "[550 rows x 7 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "9184e598",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "54c47ed9",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "ebe6206d",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "47788d37",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "67702bf2",
    "metadata": {},
    "outputs": [
@@ -718,10 +718,10 @@
     "# We overwrite it with MSCI World for the summary.\n",
     "\n",
     "# 1. Align MSCI World returns to the backtest dates\n",
-    "aligned_msci = benchmark_returns.reindex(perf_df.index).fillna(0)\n",
+    "#aligned_msci = benchmark_returns.reindex(perf_df.index).fillna(0)\n",
     "\n",
     "# 2. Inject into results DataFrame\n",
-    "perf_df[\"ret_bm\"] = aligned_msci\n",
+    "#perf_df[\"ret_bm\"] = aligned_msci\n",
     "\n",
     "# E. Plotting & Summary\n",
     "perf_df = perf_df[perf_df[\"turnover\"].cumsum() > 0]\n",
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "6ddc6649",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "AC 3                       0.0009"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
