--- a/Code/trend_following.ipynb
+++ b/Code/trend_following.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "5e5cbac3",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "09f9ed5e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "611b32ad",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "33072e9a",
    "metadata": {},
    "outputs": [
@@ -72,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Eq...\n",
-      "Loading Bd...\n",
-      "Loading Rt...\n",
-      "Loading FX...\n",
+      "Loading ...\n",
+      "Loading ...\n",
+      "Loading ...\n",
+      "Loading ...\n",
       "\n",
       "--- RUNNING STRATEGY: EQUITY ---\n",
       "   Assets: 7\n",
@@ -277,15 +277,15 @@
     "        df = (1 + df.fillna(0)).cumprod() * 100\n",
     "    \n",
     "    # Renaming and Resampling\n",
-    "    df.columns = [f\"{c}_{suffix}\" for c in df.columns]\n",
+    "    df.columns = [f\"{c}{suffix}\" for c in df.columns]\n",
     "    df = df.apply(pd.to_numeric, errors='coerce').resample(RESAMPLE_FREQ).last().ffill()\n",
     "    return df\n",
     "\n",
     "# --- Load Assets ---\n",
-    "df_eq = load_and_process(\"Equity Data.xlsx\", \"Eq\")\n",
-    "df_bd = load_and_process(\"Bond Data.xlsx\", \"Bd\")\n",
-    "df_rt = load_and_process(\"Interest Rates Data.xlsx\", \"Rt\")\n",
-    "df_fx = load_and_process(\"FX Data.xlsx\", \"FX\", is_fx=True)\n",
+    "df_eq = load_and_process(\"Equity Data.xlsx\", \"\")\n",
+    "df_bd = load_and_process(\"Bond Data.xlsx\", \"\")\n",
+    "df_rt = load_and_process(\"Interest Rates Data.xlsx\", \"\")\n",
+    "df_fx = load_and_process(\"FX Data.xlsx\", \"\", is_fx=True)\n",
     "\n",
     "# --- Load Benchmark ---\n",
     "df_bench = pd.read_excel(os.path.join(DATA_PATH, \"Benchmarks.xlsx\"), engine='openpyxl')\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "96250c2f",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "7bac0afe",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "325b5186",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "eb4776ef",
    "metadata": {},
    "outputs": [],
