--- a/Code/FX_overlays.ipynb
+++ b/Code/FX_overlays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "22276494",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "dd35e3a8",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "e41b653b",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "1160565c",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "4ab453a0",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "e6833155",
    "metadata": {},
    "outputs": [
@@ -218,45 +218,45 @@
      "text": [
       "Output Tail (Relative to USD):\n",
       "           Date Region  Hedge_Ratio_Next_Month  FX_Score_Z_vs_USD\n",
-      "3984 2025-05-01     GB                    0.50           0.513578\n",
-      "3985 2025-05-01     EU                    0.50           0.333087\n",
-      "3986 2025-05-01     CH                    0.50           0.493301\n",
-      "3987 2025-05-01     JP                    0.00           1.925708\n",
-      "3988 2025-05-01     AU                    1.00          -1.182028\n",
-      "3990 2025-06-01     GB                    0.50           0.589352\n",
-      "3991 2025-06-01     EU                    0.50           0.175136\n",
-      "3992 2025-06-01     CH                    0.50           0.446551\n",
-      "3993 2025-06-01     JP                    0.00           1.840654\n",
-      "3994 2025-06-01     AU                    1.00          -1.254218\n",
-      "3996 2025-07-01     GB                    0.50           0.636275\n",
-      "3997 2025-07-01     EU                    0.50           0.230227\n",
-      "3998 2025-07-01     CH                    0.50           0.589614\n",
-      "3999 2025-07-01     JP                    0.00           1.782179\n",
-      "4000 2025-07-01     AU                    1.00          -1.285935\n",
-      "4002 2025-08-01     GB                    0.00           1.103210\n",
-      "4003 2025-08-01     EU                    0.75          -0.431655\n",
-      "4004 2025-08-01     CH                    1.00          -1.836347\n",
-      "4005 2025-08-01     JP                    0.50           0.449142\n",
-      "4006 2025-08-01     AU                    0.50           0.244377\n",
-      "4008 2025-09-01     GB                    0.00           1.173492\n",
-      "4009 2025-09-01     EU                    0.75          -0.158737\n",
-      "4010 2025-09-01     CH                    1.00          -1.894192\n",
-      "4011 2025-09-01     JP                    0.75          -0.079561\n",
-      "4012 2025-09-01     AU                    0.50           0.282363\n",
-      "4014 2025-10-01     GB                    0.00           1.408804\n",
-      "4015 2025-10-01     EU                    0.50           0.289689\n",
-      "4016 2025-10-01     CH                    1.00          -1.626566\n",
-      "4017 2025-10-01     JP                    0.50           0.599775\n",
-      "4018 2025-10-01     AU                    0.50           0.273519\n"
+      "3990 2025-06-01     GB                    0.50           0.672986\n",
+      "3991 2025-06-01     EU                    0.50           0.148227\n",
+      "3992 2025-06-01     CH                    0.50           0.398172\n",
+      "3993 2025-06-01     JP                    0.00           1.952005\n",
+      "3994 2025-06-01     AU                    1.00          -1.432203\n",
+      "3995 2025-06-01     EM                    0.50           0.393339\n",
+      "3996 2025-07-01     GB                    0.50           0.727026\n",
+      "3997 2025-07-01     EU                    0.50           0.210360\n",
+      "3998 2025-07-01     CH                    0.50           0.567383\n",
+      "3999 2025-07-01     JP                    0.00           1.882536\n",
+      "4000 2025-07-01     AU                    1.00          -1.469345\n",
+      "4001 2025-07-01     EM                    0.50           0.453856\n",
+      "4002 2025-08-01     GB                    0.00           1.340868\n",
+      "4003 2025-08-01     EU                    0.75          -0.133551\n",
+      "4004 2025-08-01     CH                    0.50           0.673690\n",
+      "4005 2025-08-01     JP                    0.00           2.654754\n",
+      "4006 2025-08-01     AU                    0.50           0.297021\n",
+      "4007 2025-08-01     EM                    0.50           0.051641\n",
+      "4008 2025-09-01     GB                    0.00           1.279097\n",
+      "4009 2025-09-01     EU                    0.75          -0.211006\n",
+      "4010 2025-09-01     CH                    1.00          -2.076890\n",
+      "4011 2025-09-01     JP                    0.75          -0.154207\n",
+      "4012 2025-09-01     AU                    0.50           0.307773\n",
+      "4013 2025-09-01     EM                    0.75          -0.038286\n",
+      "4014 2025-10-01     GB                    0.00           1.551018\n",
+      "4015 2025-10-01     EU                    0.50           0.283597\n",
+      "4016 2025-10-01     CH                    1.00          -1.791480\n",
+      "4017 2025-10-01     JP                    0.50           0.602613\n",
+      "4018 2025-10-01     AU                    0.50           0.301130\n",
+      "4019 2025-10-01     EM                    0.50           0.145747\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sedláček\\AppData\\Local\\Temp\\ipykernel_23468\\3264215218.py:5: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
+      "C:\\Users\\Sedláček\\AppData\\Local\\Temp\\ipykernel_23468\\2873720211.py:5: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
       "  df_hedge = hedge_ratios_next_month.stack(dropna=False).to_frame(name='Hedge_Ratio_Next_Month')\n",
-      "C:\\Users\\Sedláček\\AppData\\Local\\Temp\\ipykernel_23468\\3264215218.py:8: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
+      "C:\\Users\\Sedláček\\AppData\\Local\\Temp\\ipykernel_23468\\2873720211.py:8: FutureWarning: The previous implementation of stack is deprecated and will be removed in a future version of pandas. See the What's New notes for pandas 2.1.0 for details. Specify future_stack=True to adopt the new implementation and silence this warning.\n",
       "  df_score = relative_fx_score.shift(1).stack(dropna=False).to_frame(name='FX_Score_Z_vs_USD')\n"
      ]
     }
@@ -277,6 +277,9 @@
     "\n",
     "# Clean up empty rows\n",
     "output = output.dropna(subset=['Hedge_Ratio_Next_Month', 'FX_Score_Z_vs_USD'], how='all')\n",
+    "\n",
+    "output_path = r\"../Data/FX_Predictions.csv\"\n",
+    "output.to_csv(output_path, index=False)\n",
     "\n",
     "print(\"Output Tail (Relative to USD):\")\n",
     "print(output.tail(30))"
